--- a/app/src/main/res/layout/activity_section_f5_s1.xml
+++ b/app/src/main/res/layout/activity_section_f5_s1.xml
@@ -338,6 +338,7 @@
                         android:id="@+id/f5107"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
                         android:hint="@string/f5107"
                         android:text="@={form.f5107}" />
                 </LinearLayout>
@@ -382,8 +383,8 @@
                         android:text="@={form.f5108}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -427,8 +428,8 @@
                         android:text="@={form.f5109}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -501,6 +502,7 @@
                     </LinearLayout>
 
                     <EditText
+                        android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
                         android:id="@+id/f5111"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
